// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Configuration 1`] = `
LoggerRuntimeConfigurationBuilder {
  "Configuration": Object {
    "DefaultLogLevel": Object {
      "LogLevel": 4,
      "LogLevelIsBitMask": false,
    },
    "Prefix": "New prefix",
    "WriteMessageHandlers": Array [
      Object {
        "Handler": ConsoleMessageHandler {
          "configuration": Object {
            "LogLevelPrefix": "short",
            "TimePrefix": "short",
            "UseColors": false,
          },
          "defaultConfiguration": Object {
            "LogLevelPrefix": "short",
            "TimePrefix": "short",
            "UseColors": false,
          },
        },
        "LogLevel": 4,
        "LogLevelIsBitMask": false,
      },
    ],
  },
}
`;

exports[`Default Configuration 1`] = `
LoggerRuntimeConfigurationBuilder {
  "Configuration": Object {
    "DefaultLogLevel": Object {
      "LogLevel": 4,
      "LogLevelIsBitMask": false,
    },
    "Prefix": "New prefix",
    "WriteMessageHandlers": Array [
      Object {
        "Handler": ConsoleMessageHandler {
          "configuration": Object {
            "LogLevelPrefix": "short",
            "TimePrefix": "short",
            "UseColors": false,
          },
          "defaultConfiguration": Object {
            "LogLevelPrefix": "short",
            "TimePrefix": "short",
            "UseColors": false,
          },
        },
        "LogLevel": 4,
        "LogLevelIsBitMask": false,
      },
    ],
  },
}
`;

exports[`Same Configuration 1`] = `
LoggerRuntimeConfigurationBuilder {
  "Configuration": Object {
    "DefaultLogLevel": Object {
      "LogLevel": 32,
      "LogLevelIsBitMask": false,
    },
    "Prefix": undefined,
    "WriteMessageHandlers": Array [
      Object {
        "Handler": ConsoleMessageHandler {
          "configuration": Object {
            "LogLevelPrefix": "short",
            "TimePrefix": "short",
            "UseColors": false,
          },
          "defaultConfiguration": Object {
            "LogLevelPrefix": "short",
            "TimePrefix": "short",
            "UseColors": false,
          },
        },
        "LogLevel": 32,
        "LogLevelIsBitMask": false,
      },
    ],
  },
}
`;
